<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mamma HELP</string>
    <string name="versionName">Version:</string>
    <string name="versionString">%1$s (code: %2$d)</string>
    <string name="last_updated">Time of content update</string>
    <string name="last_updated_news">Time of news update</string>
    <string name="date_time">%1$s in %2$s</string>
    <string name="mismatched_category">Mismatched category</string>

    <string-array name="weeks">
        <item>weeks</item>
        <item>week</item>
        <item>weeks</item>
    </string-array>
    <string-array name="days">
        <item>days</item>
        <item>day</item>
        <item>days</item>
    </string-array>
    <string-array name="hours">
        <item>hours</item>
        <item>hour</item>
        <item>hours</item>
    </string-array>
    <string-array name="minutes">
        <item>minutes</item>
        <item>minute</item>
        <item>minutes</item>
    </string-array>
    <string-array name="nav_items">
        <item>Informations</item>
        <item>News</item>
        <item>Advice and help</item>
        <item>Mamma HELP</item>
        <item>Centers</item>
        <item>Prevention</item>
    </string-array>
    <string-array name="filter">
        <item>centers</item>
        <item>branches</item>
        <item>shops</item>
    </string-array>

    <string name="unsupported_protocol">Unsupported protocol</string>
    <string name="malformed_url">URL "%s" is invalid</string>
    <string name="http_error_response">Server returned code %1$s: %2$s</string>
    <string name="unexpected_exception">Unexpected exception ocured - see error log</string>
    <string name="send_to">Share</string>
    <string name="send_error">Send Error</string>
    <string name="import_failed">Data import failed: </string>
    <string name="delete_delay_title">Delete after</string>
    <string name="delete_delay_description">Records older than this period will be deleted.</string>
    <string name="only_wifi_title">Download on WiFi only</string>
    <string name="only_wifi_description">Don\'t download background data over 3G networks. Use WiFi only. If you update data manually, it will be downloaded even over mobile network.</string>
    <string name="never">never</string>
    <string name="update_on_particular_time_title">Update on particular time</string>
    <string name="update_on_particular_time_description">If enabled, updates will be performed on selected time. Otherwise data will be updated on selected interval.</string>
    <string name="update_automatically_title">Automatic updates on backgroud</string>
    <string name="update_automatically_description">If active, data will be updated automatically on the background based on your update plan.</string>
    <string name="refresh_period_description">Time after which data will be updated.</string>
    <string name="refresh_period_title">Update period</string>
    <string name="update_time_title">Update time</string>
    <string name="update_time_description">Time at which data will be updated.</string>
    <string name="action_about">About</string>
    <string name="banner1">Discussion forum</string>
    <string name="banner2">Bohemian Gran Fondo</string>
    <string name="banner3">Mamma SHOP</string>
    <string name="banner1_text">Milé mammahelpky a příznivci Mamma HELPu, připravili jsme pro vás diskuzní fórum, kde můžete společně diskutovat o všech problémech týkajících se problematiky rakoviny prsu.</string>
    <string name="banner2_text">Spojení mimořádného sportovního výkonu s projevem lidské sounáležitosti dokumentované poskytnutím finačních prostředků na podporu celospolečensky významného projektu bylo základní myšlenkou organizátorů při vzniku Bohemian Gran Fondo. Jejich inspirací se staly kultovní La Marmotte  ve Francouzských Alpách, jeden z nejtěžších cyklistických amatérských závodů na světě, a Pan Massachusetts Challenge (www.pmc.org) v USA, který každoročně získává od účastníků vytrvalostní cyklistické jízdy mnohamilónové částky v USD na výzkum rakoviny. Tedy sportovní náročnost La Marmotte propojená s lidskou solidaritou Pan Massachusetts Challenge.</string>
    <string name="banner3_text">Náš život se zcela neočekávaně změnil. Přesto se nevzdáváme, neztrácíme naději a bojujeme s nemocí, která nás i naše rodiny hluboce zasáhla a poznamenala. A chceme také pomoci najít odvahu dalším, které se dostanou do stejné situace. Je nás víc jak sedmdesát tisíc, které se denně potýkáme se zkušeností jménem rakovina prsu. Pomozte nám vyhrát!</string>
    <string name="failed_to_connect">Failed to connect!</string>
    <string name="update_failed">Failed to update data</string>
    <string name="action_refresh">Refresh</string>
    <string name="centers_list">List of centers</string>
    <string name="update_already_running">Upate already running</string>
    <string name="centers_map">Map</string>
    <string name="all">All</string>
    <string name="prefs_summary_news">Enable/disable updating of news and allows to change interval.</string>
    <string name="prefs_title_news">News</string>
    <string name="prefs_summary_articles">Enable/disable updating of articles and allows to change interval.</string>
    <string name="prefs_title_articles">Other content</string>
    <string name="news_updated_title">News has been updated</string>
    <string name="news_updated_description">Some new informations arrived. Click to open Mamma HELP application.</string>
    <string name="preferences_run_update_summary">Force updating all content except news.</string>
    <string name="preferences_run_update_title">Update content</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Mamma HELP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Open navigation drawer</string>
    <string name="update_started">Update started</string>
    <string name="no_content_try_later">No another content. Try later.</string>
    <string name="prefs_title_cleanup">Cleanup</string>
    <string name="prefs_summary_cleanup">Removes unused objects from database.</string>
    <string name="preferences_run_cleanup_title">Cleanup</string>
    <string name="preferences_run_cleanup_summary">Run cleanup service. It tries to remove no longer used articles and enclosures.</string>
<string name="cleanup_started">Cleanup started</string>
</resources>